Created the DatabBase files.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h2><%= @book[:title] %></h2>
+
+<h4>Author: <%= @book[:author]%></h4>
+
+<p><%= @book[:descr] %></p>
