Created a form for adding new book

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
 span.title {font-weight: bold;}
 
 body {
-  background-color: #E6E6FA;
+  /* background-color: #E6E6FA; */
   color: #4B0082;
   /* margin: 30px; */
   font-family: 'Amita', cursive;
