Added nested params for the 'add book' form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@ body {
   /* background-color: #E6E6FA; */
   color: #4B0082;
   /* margin: 30px; */
-  font-family: 'Amita', cursive;
+  /* font-family: 'Amita', cursive; */
   border: 3px double;
   margin-top: 20px;
 }
