--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -8,17 +8,18 @@
   <br />
   <label for="title"> Title: </label>
   <br />
-  <input type="text" name="title" value="" id="title">
+  <input type="text" name="book[title]" value="" id="title">
 
   <br />
   <label for="author"> Author: </label>
   <br />
-  <input type="text" name="author" id="author">
+  <input type="text" name="book[author]" id="author">
+  <!--  puting book[author] will make it come back as a nested hash -->
 
   <br />
   <label for="description"> Description: </label>
   <br />
-  <textarea name="description" id="description">  </textarea>
+  <textarea name="book[description]" id="description">  </textarea>
   <!-- u can write something inside of it if u want-->
 
   <!-- button -->
