--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,28 +1,36 @@
 
-<h2>Create a new book:</h2>
+<!-- Use the _form.html.erb -->
+<%= render partial: "form", locals: {page_title: "Create New Book"} %>
+
+<!-- locals: refers to localvariabel -->
+
+
+<!-- ================================================== -->
+<!-- <h2>Create a new book:</h2>
 <br /><br />
 
 <%= form_for @book do |f| %>
 
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br /><br />
-  <!-- This :symbols must match a field on that file active record model object -->
+<%= f.label :title %>
+<%= f.text_field :title %>
+<br /><br />
+<-- This :symbols must match a field on that file active record model object -->
 
-  <%= f.label :author %>
-  <%= f.text_field :author %>
-  <br /><br />
+<!-- <%= f.label :author %>
+<%= f.text_field :author %>
+<br /><br />
 
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-  <br /><br />
+<%= f.label :description %>
+<%= f.text_area :description %>
+<br /><br />
 
-  <%= f.submit %>
+<%= f.submit %> -->
 <!-- Since it knows this is for our Book object and that it is a POST request it knows it is related to the word 'create', so it will create a button with the sentence 'Create a Book'. You could specify a different string by doing : <%=  f.submit "whatever u want" %> -->
 
-<% end %>
+<!-- <% end %> -->
 
 
+<!-- ================================================== -->
 <!-- ______________Long way of doing same thing:_________________ -->
 
 <!-- <h2>Create a new book</h2>
