--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @book.title %></h2>
 
-<h4>Author: <%= @book.author%></h4>
+<h4>Author: <%= @book.author.name%></h4>
 
 <p><%= @book.description %></p>
 
