Fix author controller

--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,2 +1,1 @@
-<h1>Authors#new</h1>
-<p>Find me in app/views/authors/new.html.erb</p>
+<%= render partial: "form", locals: { page_title: "Create Author"}%>
