--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Authors#show</h1>
-<p>Find me in app/views/authors/show.html.erb</p>
+<h1><%= @author.name %></h1>
+<h2>Books</h2>
+<ul>
+  <% @author.books.each do |book| %>
+    <li>
+      <%= link_to book.title, book_path(book.id) %>
+    </li>
+  <% end %>
+</ul>
