--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Authors#index</h1>
-<p>Find me in app/views/authors/index.html.erb</p>
+<h1>Author List</h1>
+<ul>
+  <% @authors.each do |author|  %>
+    <li>
+      <%= link_to author.name, author_path(author.id) %>  <%= link_to "Edit", edit_author_path(author.id) %>  <%= link_to "Delete", author_path(author.id), method: :delete %> 
+    </li>
+  <% end %>
+</ul>
