Changing what was different from las days of work I missed.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>AdaBooksAmpers</title>
-    <%= csrf_meta_tags %>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
   </head>
 
   <body>
@@ -13,10 +16,7 @@
       <nav>
         <ul>
           <li>
-            <%= link_to "Home", books_path %>
-          </li>
-          <li>
-            <%= link_to "Add a Book", new_book_path %>
+            <%= link_to image_tag("http://www.placecage.com/50/50", alt: "Home"), books_path %>
           </li>
           <li>
             <%= link_to "Author List", authors_path %>
@@ -27,6 +27,8 @@
         </ul>
       </nav>
     </header>
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
