--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,3 +1,26 @@
+<h2 class="my-class"><%= page_title %></h2>
+<% if @book.errors.any? %>
+  <ul class="errors">
+    <% @book.errors.each do |field, message| %>
+      <li>
+        <strong><%= field.capitalize %>: </strong><%= message %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+<%= form_for @book, url: @action do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+
+  <strong>Author:</strong> <%= @book.author.name %>
+
+  <%= f.label :description %>
+  <%= f.text_area :description %>
+
+  <%= f.submit %>
+<% end %>
+
+
 <!-- <<<<<<< HEAD
  This is a partial view - works in any view file we want
 <h2 class="form-title"> <%= page_title %></h2>
